--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ crashlytics-build.properties
 # Info de versão
 ProjectSettings/ProjectVersion.txt
 ProjectSettings/BuildEditorSettings.txt
+**/ProjectSettings/*
