--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
-﻿{
+{
     "files.exclude":
     {
         "**/.DS_Store":true,
@@ -41,8 +41,8 @@
         "**/*.flare":true,
         "**/*.mat":true,
         "**/*.meta":true,
-        "**/*.prefab":true,
-        "**/*.unity":true,
+        // "**/*.prefab":true,
+        // "**/*.unity":true,
         "build/":true,
         "Build/":true,
         "Library/":true,
